qt/gen_qtabbar.nim

proc fcQTabBar_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_wheelEvent".}
proc fQTabBar_virtualbase_keyPressEvent(self: pointer, param1: pointer): void{.importc: "QTabBar_virtualbase_keyPressEvent".}
proc fcQTabBar_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_keyPressEvent".}
proc fQTabBar_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QTabBar_virtualbase_changeEvent".}
proc fcQTabBar_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_changeEvent".}
proc fQTabBar_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QTabBar_virtualbase_timerEvent".}
proc fcQTabBar_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_timerEvent".}
proc fQTabBar_virtualbase_devType(self: pointer, ): cint{.importc: "QTabBar_virtualbase_devType".}
proc fcQTabBar_override_virtual_devType(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_devType".}
proc fQTabBar_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QTabBar_virtualbase_setVisible".}
proc fcQTabBar_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_setVisible".}
proc fQTabBar_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QTabBar_virtualbase_heightForWidth".}
proc fcQTabBar_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_heightForWidth".}
proc fQTabBar_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QTabBar_virtualbase_hasHeightForWidth".}
proc fcQTabBar_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_hasHeightForWidth".}
proc fQTabBar_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QTabBar_virtualbase_paintEngine".}
proc fcQTabBar_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_paintEngine".}
proc fQTabBar_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QTabBar_virtualbase_mouseDoubleClickEvent".}
proc fcQTabBar_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_mouseDoubleClickEvent".}
proc fQTabBar_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QTabBar_virtualbase_keyReleaseEvent".}
proc fcQTabBar_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_keyReleaseEvent".}
proc fQTabBar_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QTabBar_virtualbase_focusInEvent".}
proc fcQTabBar_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_focusInEvent".}
proc fQTabBar_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QTabBar_virtualbase_focusOutEvent".}
proc fcQTabBar_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_focusOutEvent".}
proc fQTabBar_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QTabBar_virtualbase_enterEvent".}
proc fcQTabBar_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_enterEvent".}
proc fQTabBar_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QTabBar_virtualbase_leaveEvent".}
proc fcQTabBar_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_leaveEvent".}
proc fQTabBar_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QTabBar_virtualbase_moveEvent".}
proc fcQTabBar_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_moveEvent".}
proc fQTabBar_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QTabBar_virtualbase_closeEvent".}
proc fcQTabBar_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_closeEvent".}
proc fQTabBar_virtualbase_contextMenuEvent(self: pointer, event: pointer): void{.importc: "QTabBar_virtualbase_contextMenuEvent".}
proc fcQTabBar_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_contextMenuEvent".}
proc fQTabBar_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QTabBar_virtualbase_tabletEvent".}
proc fcQTabBar_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_tabletEvent".}
proc fQTabBar_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QTabBar_virtualbase_actionEvent".}
proc fcQTabBar_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_actionEvent".}
proc fQTabBar_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QTabBar_virtualbase_dragEnterEvent".}
proc fcQTabBar_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_dragEnterEvent".}
proc fQTabBar_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QTabBar_virtualbase_dragMoveEvent".}
proc fcQTabBar_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_dragMoveEvent".}
proc fQTabBar_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QTabBar_virtualbase_dragLeaveEvent".}
proc fcQTabBar_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_dragLeaveEvent".}
proc fQTabBar_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QTabBar_virtualbase_dropEvent".}
proc fcQTabBar_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_dropEvent".}
proc fQTabBar_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QTabBar_virtualbase_nativeEvent".}
proc fcQTabBar_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_nativeEvent".}
proc fQTabBar_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QTabBar_virtualbase_metric".}
proc fcQTabBar_override_virtual_metric(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_metric".}
proc fQTabBar_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QTabBar_virtualbase_initPainter".}
proc fcQTabBar_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_initPainter".}
proc fQTabBar_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QTabBar_virtualbase_redirected".}
proc fcQTabBar_override_virtual_redirected(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_redirected".}
proc fQTabBar_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QTabBar_virtualbase_sharedPainter".}
proc fcQTabBar_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_sharedPainter".}
proc fQTabBar_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QTabBar_virtualbase_inputMethodEvent".}
proc fcQTabBar_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_inputMethodEvent".}
proc fQTabBar_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QTabBar_virtualbase_inputMethodQuery".}
proc fcQTabBar_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_inputMethodQuery".}
proc fQTabBar_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QTabBar_virtualbase_focusNextPrevChild".}
proc fcQTabBar_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_focusNextPrevChild".}
proc fQTabBar_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QTabBar_virtualbase_eventFilter".}
proc fcQTabBar_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_eventFilter".}
proc fQTabBar_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QTabBar_virtualbase_childEvent".}
proc fcQTabBar_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_childEvent".}
proc fQTabBar_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QTabBar_virtualbase_customEvent".}
proc fcQTabBar_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_customEvent".}
proc fQTabBar_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QTabBar_virtualbase_connectNotify".}
proc fcQTabBar_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_connectNotify".}
proc fQTabBar_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QTabBar_virtualbase_disconnectNotify".}
proc fcQTabBar_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QTabBar_override_virtual_disconnectNotify".}
proc fcQTabBar_delete(self: pointer) {.importc: "QTabBar_delete".}


func init*(T: type QTabBar, h: ptr cQTabBar): QTabBar =
  T(h: h)
proc create*(T: type QTabBar, parent: gen_qwidget.QWidget): QTabBar =

  QTabBar.init(fcQTabBar_new(parent.h))
proc create*(T: type QTabBar, ): QTabBar =

  QTabBar.init(fcQTabBar_new2())
proc metaObject*(self: QTabBar, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQTabBar_metaObject(self.h))

proc metacast*(self: QTabBar, param1: cstring): pointer =

  fcQTabBar_metacast(self.h, param1)

proc metacall*(self: QTabBar, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQTabBar_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QTabBar, s: cstring): string =

  let v_ms = fcQTabBar_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QTabBar, s: cstring): string =

  let v_ms = fcQTabBar_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc shape*(self: QTabBar, ): QTabBarShape =

  QTabBarShape(fcQTabBar_shape(self.h))

proc setShape*(self: QTabBar, shape: QTabBarShape): void =

  fcQTabBar_setShape(self.h, cint(shape))

proc addTab*(self: QTabBar, text: string): cint =

  fcQTabBar_addTab(self.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc addTab2*(self: QTabBar, icon: gen_qicon.QIcon, text: string): cint =

  fcQTabBar_addTab2(self.h, icon.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc insertTab*(self: QTabBar, index: cint, text: string): cint =

  fcQTabBar_insertTab(self.h, index, struct_miqt_string(data: text, len: csize_t(len(text))))

proc insertTab2*(self: QTabBar, index: cint, icon: gen_qicon.QIcon, text: string): cint =

  fcQTabBar_insertTab2(self.h, index, icon.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc removeTab*(self: QTabBar, index: cint): void =

  fcQTabBar_removeTab(self.h, index)

proc moveTab*(self: QTabBar, fromVal: cint, to: cint): void =

  fcQTabBar_moveTab(self.h, fromVal, to)

proc isTabEnabled*(self: QTabBar, index: cint): bool =

  fcQTabBar_isTabEnabled(self.h, index)

proc setTabEnabled*(self: QTabBar, index: cint, enabled: bool): void =

  fcQTabBar_setTabEnabled(self.h, index, enabled)

proc isTabVisible*(self: QTabBar, index: cint): bool =

  fcQTabBar_isTabVisible(self.h, index)

proc setTabVisible*(self: QTabBar, index: cint, visible: bool): void =

  fcQTabBar_setTabVisible(self.h, index, visible)

proc tabText*(self: QTabBar, index: cint): string =

  let v_ms = fcQTabBar_tabText(self.h, index)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setTabText*(self: QTabBar, index: cint, text: string): void =
